# CustomChar

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CNAME  Doxyfile.in  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  audio_8cpp.html  audio_8cpp.js  audio_8cpp__incl.map  audio_8cpp__incl.md5  audio_8cpp_source.html  audio_8h.html  audio_8h.js  audio_8h__dep__incl.map  audio_8h__dep__incl.md5  audio_8h__incl.map  audio_8h__incl.md5  audio_8h_source.html  bruteforce_8h.html  bruteforce_8h__dep__incl.map  bruteforce_8h__dep__incl.md5  bruteforce_8h__incl.map  bruteforce_8h__incl.md5  bruteforce_8h_source.html  character_8cpp.html  character_8cpp__incl.map  character_8cpp__incl.md5  character_8cpp_source.html  character_8h.html  character_8h__dep__incl.map  character_8h__dep__incl.md5  character_8h__incl.map  character_8h__incl.md5  character_8h_source.html  chat__history_8cpp.html  chat__history_8cpp__incl.map  (+897 more)
.github/workflows/: code-format-check.yml  doxygen-gh-pages.yml
characters/jarvis/: character.json  quotes.txt
customchar/: character.h  chat_history.h  chat_message.h  common.cpp  common.h  embed_db.h  helpers.cpp  helpers.h  llm.cpp  llm.h  main-ui.cpp  main.cpp  main_cli.cpp  speech_recognizer.cpp  speech_recognizer.h  voice_recoder.h  voice_recorder.cpp  voice_recorder.h  voice_synthesizer.cpp  voice_synthesizer.h
customchar-ui/: .gitignore  README.md  chat_history.cpp  main.cpp
customchar-ui/libs/imgui/: imgui.cpp
customchar-ui/libs/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
customchar-ui/libs/imgui/include/: imconfig.h  imgui.h  imgui_impl_opengl3.h  imgui_internal.h  imstb_textedit.h
customchar/audio/: audio.cpp  audio.h  sdl.cpp  sdl.h  speech_recognizer.cpp  speech_recognizer.h  voice_recorder.cpp  voice_recorder.h  voice_synthesizer.cpp  voice_synthesizer.h
customchar/character/: character.cpp  character.h
customchar/common/: common.cpp  common.h  helpers.cpp  helpers.h
customchar/emb_search/: CMakeLists.txt  collection.h  document.cpp  document.h  embed_db.h  embed_search.cpp  embed_search.h  test_emd.cpp  types.h
customchar/embeddb/: CMakeLists.txt  collection.cpp  collection.h  document.cpp  document.h  embed_db.h  embed_search.cpp  embed_search.h  embeddb.h  test_collection.cpp  test_emd.cpp  types.h
customchar/embeddb/hnswlib/: bruteforce.h  hnswalg.h  hnswlib.h  space_ip.h  space_l2.h
customchar/executors/: plugin.h  plugin_executor.cpp  plugin_executor.h
customchar/executors/plugins/: open_app_plugin.h  video_record_plugin.h
customchar/gui/: Makefile  chat_message.cpp
customchar/llm/: llm.cpp  llm.h
customchar/perception/: QRReader.cpp  QRReader.h
customchar/session/: chat_history.cpp  chat_history.h  chat_message.cpp  chat_message.h
customchar/vision/: video_capture.h
def/: doxygen.def
docs/: Doxyfile.in
examples/: search_doc.cpp
headers/customchar/: llm.h  speech_recognizer.h  voice_recoder.h  voice_synthesizer.h
html/: annotated_dup.js  class_c_c_1_1_l_l_m.html  class_c_c_1_1_speech_recognizer.html  class_c_c_1_1_speech_recognizer.js  class_c_c_1_1_voice_recoder.html  class_c_c_1_1_voice_synthesizer.js  classes.html  functions.html  functions_vars.html  index.html  main_8cpp_source.html  menudata.js  navtree.css  voice__recoder_8h_source.html  voice__synthesizer_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_b.js  classes_0.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_8.js  variables_9.js
latex/: annotated.tex  class_c_c_1_1_l_l_m.tex  class_c_c_1_1_speech_recognizer.tex  class_c_c_1_1_voice_recoder.tex  class_c_c_1_1_voice_synthesizer.tex  dir_52329a553313b1bc9a682fb2a0654934.tex  index.tex  namespace_c_c.tex  namespaces.tex  refman.tex  struct_c_c_1_1whisper__params.tex
libs/: dr_wav.h
libs/hnswlib/: visited_list_pool.h
libs/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
libs/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_android.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_osx.mm  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp
libs/imgui/include/: imconfig.h  imgui.h  imgui_impl_allegro5.h  imgui_impl_android.h  imgui_impl_dx10.h  imgui_impl_dx11.h  imgui_impl_dx12.h  imgui_impl_dx9.h  imgui_impl_glfw.h  imgui_impl_glut.h  imgui_impl_metal.h  imgui_impl_opengl2.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_osx.h  imgui_impl_sdl2.h  imgui_impl_sdl3.h  imgui_impl_sdlrenderer2.h  imgui_impl_sdlrenderer3.h  imgui_impl_vulkan.h  imgui_impl_wgpu.h  imgui_impl_win32.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
libs/imspinner/: imspinner.h
libs/llama-cpp/: llama.cpp  llama.h  unicode.h
scripts/: download-models.sh  format-code.sh  format_code.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  (+60 more)
src/: llm.cpp  speech_recognizer.cpp
tests/: test_ffmpeg_as_input.cpp
